Build list now gets bigger before cutting off (overflow also scrolls) - this fix is primarily for those that have a few of every ship in their builds list.

--- a/app/less/header.less
+++ b/app/less/header.less
@@ -77,7 +77,7 @@ header {
     overflow-y: auto;
     z-index: 0;
     -webkit-overflow-scrolling: touch;
-    max-height: 400px;
+    max-height: 600px;
 
     .tablet({
       font-size: 1.1em;
